Corrections des styles pour version mobile et composant Carrousel.

--- a/src/components/Carrousel/Carrousel.css
+++ b/src/components/Carrousel/Carrousel.css
@@ -1,14 +1,12 @@
 .CarrouselContainer {
-  width: 100%;
   height: 100%;
-  border-radius: 25px;
+  position: relative;
 }
 
 .CarrouselSlides {
   height: 100%;
   width: 100%;
   object-fit: cover;
-  /* background-repeat: no-repeat; */
   object-position: center;
   border-radius: 25px;
 }
@@ -18,18 +16,17 @@
   cursor: pointer;
   background: none;
   position: absolute;
-  top: 40%;
+  top: 50%;
   transform: translate(0, -50%);
   z-index: 1;
 }
 
 .ArrowLeft {
-  margin-left: 10px;
+  left: 20px;
 }
 
 .ArrowRight {
-  /* right: 7%; */
-  left: 78%;
+  right: 20px;
 }
 
 .SlidesNumber{
@@ -37,11 +34,12 @@
   color: #ffffff;
   font-size: 24px;
   font-weight: 500;
-  letter-spacing: 0;
+  letter-spacing: 1px;
   line-height: 25.7px;
   position: absolute;
+  left: 50%;
   right: 50%;
-  top: 57%;
+  bottom: 20px;
 }
 
 /* version mobile (max-width: 600px) */
@@ -50,7 +48,16 @@
     display: none;
   }
 
-  .ArrowLeft, .ArrowRight {
-    top: 35%;
+  svg {
+    width: 24px;
+    height: 24px;
+  }
+
+  .ArrowLeft {
+    left: 0px;
+  }
+  
+  .ArrowRight {
+    right: 0px;
   }
 }
